test/e2e/activitypolicy/policies/edge-case-max-length.yaml
apiVersion: activity.miloapis.com/v1alpha1
kind: ActivityPolicy
metadata:
  name: test-edge-case-max-length
spec:
  resource:
    apiGroup: apps
    kind: Deployment
  auditRules:
    - name: "a23456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-12z"
      match: "verb == 'create'"
      summary: "{{ actor }} created deployment"
